updated stream-practice with implementation of additional remarks